infra/k8s/backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      # telling our deployment the name of the pod we are referring to
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      # defining all the containers that will run in our pod
      containers:
        - name: backend
          # we are using the image we created from our docker file and pushed to docker hub
          image: aosborne17/backend:latest
          # list out all the env variables we want to have access to inside this container
---
# adding the three dashes allows us to create multiple objects in one yaml file
apiVersion: v1
kind: Service
metadata:
  name: backend-srv
spec:
  # tellling our cluster ip service to direct incoming traffic to the backend pod
  selector:
    app: backend
  type: ClusterIP
  ports:
    - name: backend
      protocol: TCP
      targetPort: 3000
      port: 3000
